@@ -14,6 +14,7 @@
 - Added Xcode project files to build libmpg123 on Mac OS and iOS
 - 32 bit output for sndio output (patch by Brad Smith).
 - Remote control interface knows LOADLIST command now.
+- Now freeing meta data memory after printout.
 
 1.13.7
 ---
